# Cpp-Template

./: .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
include/: dummymain.h
include/Cpp-Template/: dummymainclass.h
src/: dummymain.cpp  dummymainclass.cpp
tests/: CMakeLists.txt  test_dummymain.cpp  test_dummymainclass.cpp
